data/all_generated_tests/raw_wast_tests/nop_TypeMismatchinControlFlowInstructions_659.wast
;; 10. Construct a function employing a `nop` in a `loop` structure with a blend of `i32.reinterpret_f32` and `f32.convert_i32_u` operations. This differential test examines the type consistency maintained by both implementations when reinterpreting and converting types around `nop`.  These tests ensure that the fundamental requirement of type mismatch validation within control flow instructions is adhered to while testing for the implementation of the `nop` instruction in WebAssembly and the wizard_engine.

(assert_invalid
  (module
    (func $type-loop (param $x f32) (result i32)
      (loop $loop
        local.get $x
        i32.reinterpret_f32
        nop
        f32.convert_i32_u
        br $loop
      )
    )
  )
  "type mismatch"
)